# setup-environment-manugcr

./: CMakeLists.txt  RUNLAB.sh  RUNTESTS.sh  compose.yaml  sonar-project.properties
docs/: Doxyfile
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
lib/libsta/src/: static.c
scripts/: RUN_COVERAGE.sh  RUN_LAB.sh  RUN_REPORTS.sh  RUN_TESTS.sh
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unity/: test_unit_program.c
